cleaning up swagger comments
